glf90w_constants.f90

! -----------------
! glf90w_constants.f90
! 16 Mar 2024
! Gaétan J.A.M. Jalin
! See end of file for complete licence description
! -----------------
module glf90w_constants
    use, intrinsic :: iso_c_binding, only: c_int

    implicit none
    private

    integer(c_int), bind(C, name="glf90w_version_major"),                  public :: GLFW_VERSION_MAJOR
    integer(c_int), bind(C, name="glf90w_version_minor"),                  public :: GLFW_VERSION_MINOR
    integer(c_int), bind(C, name="glf90w_version_revision"),               public :: GLFW_VERSION_REVISION
    integer(c_int), bind(C, name="glf90w_true"),                           public :: GLFW_TRUE
    integer(c_int), bind(C, name="glf90w_false"),                          public :: GLFW_FALSE

    integer(c_int), bind(C, name="glf90w_release"),                        public :: GLFW_RELEASE
    integer(c_int), bind(C, name="glf90w_press"),                          public :: GLFW_PRESS
    integer(c_int), bind(C, name="glf90w_repeat"),                         public :: GLFW_REPEAT
    integer(c_int), bind(C, name="glf90w_hat_centered"),                   public :: GLFW_HAT_CENTERED
    integer(c_int), bind(C, name="glf90w_hat_up"),                         public :: GLFW_HAT_UP
    integer(c_int), bind(C, name="glf90w_hat_right"),                      public :: GLFW_HAT_RIGHT
    integer(c_int), bind(C, name="glf90w_hat_down"),                       public :: GLFW_HAT_DOWN
    integer(c_int), bind(C, name="glf90w_hat_left"),                       public :: GLFW_HAT_LEFT
    integer(c_int), bind(C, name="glf90w_hat_right_up"),                   public :: GLFW_HAT_RIGHT_UP
    integer(c_int), bind(C, name="glf90w_hat_right_down"),                 public :: GLFW_HAT_RIGHT_DOWN
    integer(c_int), bind(C, name="glf90w_hat_left_up"),                    public :: GLFW_HAT_LEFT_UP
    integer(c_int), bind(C, name="glf90w_hat_left_down"),                  public :: GLFW_HAT_LEFT_DOWN

    integer(c_int), bind(C, name="glf90w_key_unknown"),                    public :: GLFW_KEY_UNKNOWN

    integer(c_int), bind(C, name="glf90w_key_space"),                      public :: GLFW_KEY_SPACE
    integer(c_int), bind(C, name="glf90w_key_apostrophe"),                 public :: GLFW_KEY_APOSTROPHE
    integer(c_int), bind(C, name="glf90w_key_comma"),                      public :: GLFW_KEY_COMMA
    integer(c_int), bind(C, name="glf90w_key_minus"),                      public :: GLFW_KEY_MINUS
    integer(c_int), bind(C, name="glf90w_key_period"),                     public :: GLFW_KEY_PERIOD
    integer(c_int), bind(C, name="glf90w_key_slash"),                      public :: GLFW_KEY_SLASH
    integer(c_int), bind(C, name="glf90w_key_0"),                          public :: GLFW_KEY_0
    integer(c_int), bind(C, name="glf90w_key_1"),                          public :: GLFW_KEY_1
    integer(c_int), bind(C, name="glf90w_key_2"),                          public :: GLFW_KEY_2
    integer(c_int), bind(C, name="glf90w_key_3"),                          public :: GLFW_KEY_3
    integer(c_int), bind(C, name="glf90w_key_4"),                          public :: GLFW_KEY_4
    integer(c_int), bind(C, name="glf90w_key_5"),                          public :: GLFW_KEY_5
    integer(c_int), bind(C, name="glf90w_key_6"),                          public :: GLFW_KEY_6
    integer(c_int), bind(C, name="glf90w_key_7"),                          public :: GLFW_KEY_7
    integer(c_int), bind(C, name="glf90w_key_8"),                          public :: GLFW_KEY_8
    integer(c_int), bind(C, name="glf90w_key_9"),                          public :: GLFW_KEY_9
    integer(c_int), bind(C, name="glf90w_key_semicolon"),                  public :: GLFW_KEY_SEMICOLON
    integer(c_int), bind(C, name="glf90w_key_equal"),                      public :: GLFW_KEY_EQUAL
    integer(c_int), bind(C, name="glf90w_key_a"),                          public :: GLFW_KEY_A
    integer(c_int), bind(C, name="glf90w_key_b"),                          public :: GLFW_KEY_B
    integer(c_int), bind(C, name="glf90w_key_c"),                          public :: GLFW_KEY_C
    integer(c_int), bind(C, name="glf90w_key_d"),                          public :: GLFW_KEY_D
    integer(c_int), bind(C, name="glf90w_key_e"),                          public :: GLFW_KEY_E
    integer(c_int), bind(C, name="glf90w_key_f"),                          public :: GLFW_KEY_F
    integer(c_int), bind(C, name="glf90w_key_g"),                          public :: GLFW_KEY_G
    integer(c_int), bind(C, name="glf90w_key_h"),                          public :: GLFW_KEY_H
    integer(c_int), bind(C, name="glf90w_key_i"),                          public :: GLFW_KEY_I
    integer(c_int), bind(C, name="glf90w_key_j"),                          public :: GLFW_KEY_J
    integer(c_int), bind(C, name="glf90w_key_k"),                          public :: GLFW_KEY_K
    integer(c_int), bind(C, name="glf90w_key_l"),                          public :: GLFW_KEY_L
    integer(c_int), bind(C, name="glf90w_key_m"),                          public :: GLFW_KEY_M
    integer(c_int), bind(C, name="glf90w_key_n"),                          public :: GLFW_KEY_N
    integer(c_int), bind(C, name="glf90w_key_o"),                          public :: GLFW_KEY_O
    integer(c_int), bind(C, name="glf90w_key_p"),                          public :: GLFW_KEY_P
    integer(c_int), bind(C, name="glf90w_key_q"),                          public :: GLFW_KEY_Q
    integer(c_int), bind(C, name="glf90w_key_r"),                          public :: GLFW_KEY_R
    integer(c_int), bind(C, name="glf90w_key_s"),                          public :: GLFW_KEY_S
    integer(c_int), bind(C, name="glf90w_key_t"),                          public :: GLFW_KEY_T
    integer(c_int), bind(C, name="glf90w_key_u"),                          public :: GLFW_KEY_U
    integer(c_int), bind(C, name="glf90w_key_v"),                          public :: GLFW_KEY_V
    integer(c_int), bind(C, name="glf90w_key_w"),                          public :: GLFW_KEY_W
    integer(c_int), bind(C, name="glf90w_key_x"),                          public :: GLFW_KEY_X
    integer(c_int), bind(C, name="glf90w_key_y"),                          public :: GLFW_KEY_Y
    integer(c_int), bind(C, name="glf90w_key_z"),                          public :: GLFW_KEY_Z
    integer(c_int), bind(C, name="glf90w_key_left_bracket"),               public :: GLFW_KEY_LEFT_BRACKET
    integer(c_int), bind(C, name="glf90w_key_backslash"),                  public :: GLFW_KEY_BACKSLASH
    integer(c_int), bind(C, name="glf90w_key_right_bracket"),              public :: GLFW_KEY_RIGHT_BRACKET
    integer(c_int), bind(C, name="glf90w_key_grave_accent"),               public :: GLFW_KEY_GRAVE_ACCENT
    integer(c_int), bind(C, name="glf90w_key_world_1"),                    public :: GLFW_KEY_WORLD_1
    integer(c_int), bind(C, name="glf90w_key_world_2"),                    public :: GLFW_KEY_WORLD_2
